# wasmbindgen_bug_async_fn_arg

./: Cargo.toml  Makefile  README.md  run.js
src/: lib.rs
