[package]
name = "wasmbindgen_bug_async_fn_arg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wasmbindgen_bug_async_fn_arg"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"
